# ExampleServices

./: .gitignore  README.md  Scenarios.md
Scenario_1/: scenario_1.md
Scenario_1/1_Starting/CAWI/: CAWI.sln  Dockerfile
Scenario_1/1_Starting/CAWI/CAWI/: Program.cs  Startup.cs  WeatherForecast.cs  appsettings.Development.json  appsettings.json  eu-countries.json
Scenario_1/1_Starting/ErrorLocalization/: Dockerfile  ErrorLocalization.sln  README.md  nbactions.xml  pom.xml  spec.md
Scenario_1/2_Results/: README.md
Scenario_1/2_Results/CAWI/: README.md
Scenario_1/2_Results/CodeListService/: .gitignore  Dockerfile  README.md  pyproject.toml
Scenario_1/2_Results/CodeListService/codelistservice/: app.py
Scenario_1/2_Results/CodeListService/codelistservice/cls/: Chart.yaml  values.yaml
Scenario_1/2_Results/CodeListService/codelistservice/cls/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
Scenario_1/2_Results/CodeListService/codelistservice/cls/templates/tests/: test-connection.yaml
Scenario_1/2_Results/CodeListService/codelistservice/resources/: countries.json
Scenario_1/2_Results/CodeListService/tests/: test_codelistservice.py
Scenario_1/2_Results/ErrorLocalization/: Dockerfile  README.md  pom.xml
Scenario_1/2_Results/Errorlocalization/: pom.xml
Scenario_1/Version 1.0/: README.md
Scenario_1/Version 1.0/StatisticalPrograms/: StatisticalPrograms.sln
Scenario_1/Version_1.0/StatisticalPrograms/: Dockerfile  readme.md
Scenario_1/Version_1/CodeLists/: CodeLists.sln
(+103 files in other folders)
