[tool.poetry]
name = "CodeListService"
version = "0.1.0"
description = ""
authors = ["romaintailhurat <romain.tailhurat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
